Plan, Execute and Reflect Agent Type (#3716)